--- a/media.html
+++ b/media.html
@@ -5,16 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- TODO add title -->
+    <title>Golden Ratio: Media</title>
     <!-- TODO add tags to support responsive website -->
 
     <link rel="stylesheet" href="css/style.css">
-    <!-- TODO add favicon -->
+    <link rel="icon" type="image/png" href="images/phi_640.png">
 </head>
 
 <body>
     <ul class="icon-bar">
-        <!-- TODO add list items with fontawesome icons -->
+        <li>
+            <a target="_blank" href="https://www.facebook.com" class="facebook"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.twitter.com" class="twitter"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.github.com" class="github"><i class="fab fa-github"></i></a>
+          </li>
     </ul>
 
     <header class="header">
