--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Golden Ratio: About</title>
+    <title>Golden Ratio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -17,24 +17,35 @@
     <ul class="icon-bar">
         <li>
             <a target="_blank" href="https://www.facebook.com" class="facebook"><i class="fab fa-facebook"></i></a>
-            </li>
-            <li>
-                <a target="_blank" href="https://www.twitter.com" class="twitter"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-                <a target="_blank" href="https://www.github.com" class="github"><i class="fab fa-github"></i></a>
-          </li>
+        </li>
+        <li>
+            <a target="_blank" href="https://www.twitter.com" class="twitter"><i class="fab fa-twitter"></i></a>
+        </li>
+        <li>
+            <a target="_blank" href="https://www.github.com" class="github"><i class="fab fa-github"></i></a>
+        </li>
     </ul>
 
 
     <header class="header">
-        <!-- TODO add hamburger and brand to all headers -->
+        <a class="toggle open" href="#nav">&#9776;</a>
+  <h1 class="brand"><a href="./index.html">Golden Ratio</a></h1>
     </header>
 
     <nav id="nav">
         <a class="toggle close" href="#">×</a>
         <ul>
-            <!-- TODO add list items with navigation and set current page active -->
+            <li class="active">
+                <a href="#">Home</a>
+              </li>
+                  <a href="fibonacci.html">Fibonacci</a>
+              </li>
+              <li>
+                  <a href="media.html">Media</a>
+              </li>
+              <li>
+                  <a href="about.html">About</a>
+              </li>
         </ul>
     </nav>
     <section role="main">
@@ -116,7 +127,10 @@
     </aside>
 
     <footer>
-        <!-- TODO add footer contents -->
+            <ul class="copyright">
+                    <li>Copyright &copy; 2019</li>
+                    <li> Alden Huschle</li>
+                  </ul>
     </footer>
 
 </body>
