--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </li>
     </ul>
 
-
+<div class="container">
     <header class="header">
         <a class="toggle open" href="#nav">&#9776;</a>
-  <h1 class="brand"><a href="./index.html">Golden Ratio</a></h1>
+        <h1 class="brand"><a href="./index.html">Golden Ratio</a></h1>
     </header>
 
     <nav id="nav">
@@ -37,15 +37,15 @@
         <ul>
             <li class="active">
                 <a href="#">Home</a>
-              </li>
-                  <a href="fibonacci.html">Fibonacci</a>
-              </li>
-              <li>
-                  <a href="media.html">Media</a>
-              </li>
-              <li>
-                  <a href="about.html">About</a>
-              </li>
+            </li>
+            <a href="fibonacci.html">Fibonacci</a>
+            </li>
+            <li>
+                <a href="media.html">Media</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
         </ul>
     </nav>
     <section role="main">
@@ -127,12 +127,12 @@
     </aside>
 
     <footer>
-            <ul class="copyright">
-                    <li>Copyright &copy; 2019</li>
-                    <li> Alden Huschle</li>
-                  </ul>
+        <ul class="copyright">
+            <li>Copyright &copy; 2019</li>
+            <li> Alden Huschle</li>
+        </ul>
     </footer>
-
+</div>
 </body>
 
 </html>
