--- a/media.html
+++ b/media.html
@@ -28,74 +28,81 @@
         </li>
     </ul>
 
-    <header class="header">
-        <a class="toggle open" href="#nav">&#9776;</a>
-        <h1 class="brand"><a href="./index.html">Golden Ratio</a></h1>
-    </header>
+    <div class="single-col-container">
+        <header class="header">
+            <a class="toggle open" href="#nav">&#9776;</a>
+            <h1 class="brand"><a href="./index.html">Golden Ratio</a></h1>
+        </header>
 
-    <nav id="nav">
-        <a class="toggle close" href="#">×</a>
-        <ul>
-            <li class="">
-                <a href="#">Home</a>
-            </li>
-            <a href="fibonacci.html">Fibonacci</a>
-            </li>
-            <li class="active">
-                <a href="media.html">Media</a>
-            </li>
-            <li>
-                <a href="about.html">About</a>
-            </li>
-        </ul>
-    </nav>
+        <nav id="nav">
+            <a class="toggle close" href="#">×</a>
+            <ul>
+                <li class="">
+                    <a href="#">Home</a>
+                </li>
+                <a href="fibonacci.html">Fibonacci</a>
+                </li>
+                <li class="active">
+                    <a href="media.html">Media</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+            </ul>
+        </nav>
 
-    <section class="main-section" role="main">
-        <h2>Media</h2>
-        <!-- TODO wrap audio in div with audio-container class -->
+        <section class="main-section" role="main">
+            <h2>Media</h2>
 
-        <h3>Podcast from
-            <a href="https://www.npr.org/templates/story/story.php?storyId=1191723">
-                NPR: 'The Golden Ratio`</a>
-            Book Examines the Mystery of Phi, Pi's Lesser-Known Cousin</h3>
-        <iframe src="https://www.npr.org/player/embed/1191723/1191742" width="100%" height="290" frameborder="0"
-            scrolling="no" title="NPR embedded audio player"></iframe>
+            <div class="audio-container">
+                <h3>Podcast from
+                    <a href="https://www.npr.org/templates/story/story.php?storyId=1191723">
+                        NPR: 'The Golden Ratio`</a>
+                    Book Examines the Mystery of Phi, Pi's Lesser-Known Cousin</h3>
+                <iframe src="https://www.npr.org/player/embed/1191723/1191742" width="100%" height="290" frameborder="0"
+                    scrolling="no" title="NPR embedded audio player"></iframe>
+            </div>
 
 
-        <!-- TODO Wrap each video and it's head element in a separate div with the class `frame-container` -->
-        <h3>Fibonacci and the Golden Mean</h3>
-        <div class="resp-container">
-            <iframe class="resp-iframe" width="560" height="315" src="https://www.youtube.com/embed/GmZlAVRKx8I"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+            <h3>Fibonacci and the Golden Mean</h3>
+            <div class="frame-container">
+                <div class="resp-container">
+                    <iframe class="resp-iframe" width="560" height="315" src="https://www.youtube.com/embed/GmZlAVRKx8I"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
 
-        </div>
-        <!-- TODO Wrap each video and it's head element in a separate div with the class `frame-container` -->
+                </div>
+            </div>
+    
 
-        <h3>In Nature</h3>
-        <div class="resp-container">
-            <iframe class="resp-iframe" width="560" height="315" src="https://www.youtube.com/embed/kkGeOWYOFoA"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
+            <h3>In Nature</h3>
+            <div class="frame-container">
+                <div class="resp-container">
+                    <iframe class="resp-iframe" width="560" height="315" src="https://www.youtube.com/embed/kkGeOWYOFoA"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
 
-        <!-- TODO Wrap each video and it's head element in a separate div with the class `frame-container` -->
+    
 
-        <h3>The Math</h3>
-        <div class="resp-container">
-            <iframe class="resp-iframe" width="560" height="315" src="https://www.youtube.com/embed/5zosU6XTgSY"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-    </section>
+            <h3>The Math</h3>
+            <div class="frame-container">
+                <div class="resp-container">
+                    <iframe class="resp-iframe" width="560" height="315" src="https://www.youtube.com/embed/5zosU6XTgSY"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
 
-    <footer>
+        <footer>
             <ul class="copyright">
-                    <li>Copyright &copy; 2019</li>
-                    <li> Alden Huschle</li>
-                  </ul>
-    </footer>
-
+                <li>Copyright &copy; 2019</li>
+                <li> Alden Huschle</li>
+            </ul>
+        </footer>
+    </div>
 </body>
 
 </html>
