--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             <a class="toggle close" href="#">×</a>
             <ul>
                 <li class="">
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="fibonacci.html">Fibonacci</a>
@@ -65,7 +65,7 @@
 
             <h3>Learning to Code HTML/CSS</h3>
             <p>This website is a project in fulfillment of HTML/CSS learning objectives:</p>
-            <!-- TODO add learning-objectives class to the ordered list -->
+            
             <div class="learning-objectives">
                 <ol>
                     <li>
