--- a/fibonacci.html
+++ b/fibonacci.html
@@ -36,7 +36,7 @@
             <a class="toggle close" href="#">×</a>
             <ul>
                 <li class="">
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li class="active">
                     <a href="fibonacci.html">Fibonacci</a>
@@ -138,14 +138,14 @@
 
         <aside>
             <div class="fib-aside">
-                    <figure class="fibonnaci">
-                            <img src="images/fibonacci.jpg" alt="Leonardo Bonacci,aka Fibonacci">
-                            <figcaption>Leonardo Bonacci, aka Fibonacci</figcaption>
-                        </figure>
-                        <figure class="book-of-calc">
-                            <img src="images/book-of-calculation.jpg" alt="from The Book of Calculation">
-                            <figcaption>The Book of Calculation <br>by Fibonacci</figcaption>
-                        </figure>
+                <figure class="fibonnaci">
+                    <img src="images/fibonacci.jpg" alt="Leonardo Bonacci,aka Fibonacci">
+                    <figcaption>Leonardo Bonacci, aka Fibonacci</figcaption>
+                </figure>
+                <figure class="book-of-calc">
+                    <img src="images/book-of-calculation.jpg" alt="from The Book of Calculation">
+                    <figcaption>The Book of Calculation <br>by Fibonacci</figcaption>
+                </figure>
             </div>
         </aside>
 
