--- a/media.html
+++ b/media.html
@@ -10,8 +10,6 @@
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat%7CUbuntu" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-
-    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="images/phi_640.png">
 </head>
 
@@ -38,7 +36,7 @@
             <a class="toggle close" href="#">×</a>
             <ul>
                 <li class="">
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <a href="fibonacci.html">Fibonacci</a>
                 </li>
